--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.gameplayFragments.OnlineMultiplayerFragment"></activity>
+        <activity android:name=".view.gameplayFragments.OnlineMultiplayerFragment" />
         <activity
             android:name=".view.GameActivity"
             android:screenOrientation="portrait"
